force-app/main/default/objects/Order/fields/RepeatOrderPlan__c.field-meta.xml
<CustomField>
    <fullName>RepeatOrderPlan__c</fullName>
    <description>[9-Jul-21 KSK] Used in TW Market Data Migration; Dynamics CRM</description>
    <label>Repeat Order Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1: Every 7 days</fullName>
            </value>
            <value>
                <fullName>2: Every 14 days</fullName>
            </value>
            <value>
                <fullName>3: Every 21 days</fullName>
            </value>
            <value>
                <fullName>4: Every 28 days</fullName>
            </value>
            <value>
                <fullName>Every 14 days</fullName>
                <isActive>false</isActive>
                <label>Every 14 days</label>
            </value>
            <value>
                <fullName>Every 21 days</fullName>
                <isActive>false</isActive>
                <label>Every 21 days</label>
            </value>
            <value>
                <fullName>Every 28 days</fullName>
                <isActive>false</isActive>
                <label>Every 28 days</label>
            </value>
            <value>
                <fullName>Every 7 days</fullName>
                <isActive>false</isActive>
                <label>Every 7 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>