force-app/main/default/objects/Order/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>