force-app/main/default/objects/Order/fields/SalesPersonCode__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonCode__c</fullName>
    <formula>Abbott_Sales_Person__r.PartnerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person Code</label>
    <type>Text</type>
</CustomField>