force-app/main/default/objects/Order/fields/SalesPersonName__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonName__c</fullName>
    <formula>Abbott_Sales_Person__r.PartnerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person Name</label>
    <type>Text</type>
</CustomField>