force-app/main/default/objects/Order/fields/SourceEndDate__c.field-meta.xml
<CustomField>
    <fullName>SourceEndDate__c</fullName>
    <label>Source End Date</label>
    <type>DateTime</type>
</CustomField>