force-app/main/default/objects/Order/fields/Subscription_Order_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order_Countdown__c</fullName>
    <label>Subscription Order Countdown</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>