force-app/main/default/objects/Order/fields/Summary_of_Order_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Order_Cancelled__c</fullName>
    <formula>IF( ISPICKVAL( Status , &quot;Cancelled Abandoned&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary of Order Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>