force-app/main/default/objects/Order/fields/TaxName__c.field-meta.xml
<CustomField>
    <fullName>TaxName__c</fullName>
    <label>Tax Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>