force-app/main/default/objects/Order/fields/TestMarket__c.field-meta.xml
<CustomField>
    <fullName>TestMarket__c</fullName>
    <description>test field to retrieve market in soql</description>
    <formula>OrderedBy__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestMarket</label>
    <type>Text</type>
</CustomField>