force-app/main/default/objects/Order/fields/Total_Order_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Cancelled__c</fullName>
    <formula>IF( (ISPICKVAL( Status , &quot;Cancelled - New Order Created&quot;) || ISPICKVAL(Status, &quot;Cancelled Before Delivery&quot;) || ISPICKVAL(Status, &quot;Cancelled - Upon Delivery&quot;) || ISPICKVAL(Status, &quot;Cancelled Abandoned&quot;)  ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>