force-app/main/default/objects/Order/fields/TotalAmountExclGst__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountExclGst__c</fullName>
    <label>Total Amount Excl Gst</label>
    <summarizedField>OrderItem.TotalPriceExclGst__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>