force-app/main/default/objects/Order/fields/TotalGSTAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalGSTAmount__c</fullName>
    <label>Total GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>