force-app/main/default/objects/Order/fields/TW_Order_Manual_ID__c.field-meta.xml
<CustomField>
    <fullName>TW_Order_Manual_ID__c</fullName>
    <externalId>true</externalId>
    <label>TW Order Manual ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>