force-app/main/default/objects/Order/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAT II</fullName>
            </value>
            <value>
                <fullName>VAT III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>