force-app/main/default/objects/Order/validationRules/Order_Household_and_OrderedBy_Household.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Household_and_OrderedBy_Household</fullName>
    <active>true</active>
    <description>Order account and Orderedby account should be the same</description>
    <errorConditionFormula>AND( ISPICKVAL(Account.Market__c, &apos;SG&apos;), AccountId != OrderedBy__r.AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Order Household and OrderedBy Household should be the same</errorMessage>
</ValidationRule>