force-app/main/default/objects/Order/validationRules/OrderStatusCompletedAndApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderStatusCompletedAndApproved</fullName>
    <active>true</active>
    <description>Orders from ANZ should be approved before completed</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &quot;Completed&quot;),ApprovalStatus__c != &apos;Approved&apos;,  Is_Asset_Order__c == True)</errorConditionFormula>
    <errorDisplayField>ApprovalStatus__c</errorDisplayField>
    <errorMessage>Order Status can only be changed to Completed if Approval Status is Approved</errorMessage>
</ValidationRule>