force-app/main/default/objects/Order/validationRules/Populate_Tax_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Tax_Fields</fullName>
    <active>true</active>
    <description>Check if TaxId__c and TaxName__c fields are populated once VAT__c is set to &quot;VAT III&quot;. TW Market only.</description>
    <errorConditionFormula>AND(
            ISPICKVAL(  VAT__c, &apos;VAT III&apos; ),
            OR( ISBLANK( TaxId__c ), ISBLANK( TaxName__c ) ), 
            TEXT(Account.Market__c) = $Label.MarketTW
        )</errorConditionFormula>
    <errorMessage>Tax Id and Tax Name fields must be populated once VAT is set to &quot;VAT III&quot;.</errorMessage>
</ValidationRule>