force-app/main/default/objects/Order/validationRules/Populate_VAT_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_VAT_Field</fullName>
    <active>true</active>
    <description>Checks if VAT__c is populated once Status is set to &quot;Submitted&quot;. TW Market only.</description>
    <errorConditionFormula>AND(
            ISPICKVAL( Status, &apos;Submitted&apos; ),
            ISPICKVAL(  VAT__c, &apos;&apos; ),
            TEXT(Account.Market__c) = $Label.MarketTW,
            CreatedFromNewOrderButton__c 
        )</errorConditionFormula>
    <errorDisplayField>VAT__c</errorDisplayField>
    <errorMessage>VAT__c must be populated once Status is set to &quot;Submitted&quot;.</errorMessage>
</ValidationRule>