force-app/main/default/objects/Order/validationRules/Preferred_Delivery_Date_in_the_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Delivery_Date_in_the_Future</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(NOT(ISNULL(PreferredDeliveryDate__c)), PreferredDeliveryDate__c &lt;= TODAY()), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>PreferredDeliveryDate__c</errorDisplayField>
    <errorMessage>Preferred Delivery Date must be in the future.</errorMessage>
</ValidationRule>