force-app/main/default/objects/Order/validationRules/Reverting_Order_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reverting_Order_Status_Validation</fullName>
    <active>true</active>
    <description>Agents cannot revert back the Order Status to Draft of Submitted</description>
    <errorConditionFormula>AND(
 !ISNEW(),
 OR(
  CONTAINS($Profile.Name, &apos;ANI Call Center Agent&apos;),
  CONTAINS($Profile.Name, &apos;ANI Customer Service Agent&apos;)),
 ISCHANGED(Status),
 OR(
  ISPICKVAL(PRIORVALUE( Status) , &quot;Transferred&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Out For Delivery&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Completed&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Cancelled - New Order Created&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Cancelled - Before Delivery&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Cancelled - Upon Delivery&quot;),
  ISPICKVAL(PRIORVALUE( Status) , &quot;Cancelled - Abandoned&quot;)
 ),
 OR(
  ISPICKVAL(Status, &quot;Draft&quot;),
  ISPICKVAL(Status, &quot;Submitted&quot;)
 )
 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Order Status cannot be reverted to Draft or Submitted  once the Order progressed beyond the Submitted status</errorMessage>
</ValidationRule>