force-app/main/default/objects/Order/validationRules/Tax_Id_Number_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Id_Number_Only</fullName>
    <active>true</active>
    <description>Checks if TaxId__c field contains numbers only.</description>
    <errorConditionFormula>AND(
            NOT( ISNUMBER( TaxId__c ) ),
            NOT( ISBLANK( TaxId__c ) ),
            TEXT( Account.Market__c) = $Label.MarketTW
        )</errorConditionFormula>
    <errorDisplayField>TaxId__c</errorDisplayField>
    <errorMessage>Tax Id should contain numbers only.</errorMessage>
</ValidationRule>