force-app/main/default/objects/Order/validationRules/When_Type_is_Sales_Return_Parent_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Type_is_Sales_Return_Parent_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Type, &quot;Sales Return&quot;),
            ISBLANK(Parent_Order__c)
        )</errorConditionFormula>
    <errorMessage>&quot;A Parent Order should be inputted since a Sales Return can only be made upon a Parent Order.&quot;</errorMessage>
</ValidationRule>